2006-09-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:     Incremented package version to 1.3.0, updated
	* sasl.man:     the manual page to cover the OTP mechanism
	* sasl.test:    and added a test for OTP client functionality.
	* pkgIndex.tcl:

2006-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:   Support OTP mechanism (depends upon the otp module).
	              client only, awaiting tests.

2006-04-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all:        Incremented version to 1.2.0
	* sasl.man:   Updated documentation.
	* sasl.tcl:   Implemented DIGEST-MD5 server. Enhanced the mechanisms
	              command so we can obtain either client or server
	              mechanisms. Added a threshold value to the mechanisms
		      command to set minimum security. Changed register to
	              uniquely register mechanisms to permit re-sourcing
		      the script.
	
2006-04-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl:   Applied patch for #1412021 from Sergei Golovan to
	* sasl.test:  make sure the service is set. Added test.
	
	* all:        Incremented SASL version to 1.1.0
	* sasl.tcl:   Fixed the common mechanisms to all do the right
	* sasl.test:  thing when handed an empty challenge. The client
	              should always begin with SASL::step $ctx "" to see
	              if there is anything to send in the initial round.
	* gtoken.tcl: Support the X-GOOGLE-TOKEN SASL mechanism. Done
	* sasl.man:   as separate package due to additional dependencies
	              (http and tls required)

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sasl.test: More boilerplate simplified via use of test support.
	* ntlm.test: (And hooked into the new common test support code).

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sasl.test: Hooked into the new common test support code.

2005-10-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
