@@ -16,13 +16,32 @@ package require SASL 1.0;               # tcllib 1.7
 package require des 1.0;                # tcllib 1.8
 package require md4;                    # tcllib 1.4
 
-#package require log;                   # tcllib 1.4
-#log::lvSuppressLE emerg 0
-
 namespace eval ::SASL {
     namespace eval NTLM {
-        variable version 1.0.0
-        variable rcsid {$Id: ntlm.tcl,v 1.6 2005/10/11 19:50:37 patthoyts Exp $}
+        variable version 1.1.0
+        variable rcsid {$Id: ntlm.tcl,v 1.7 2006/09/14 11:33:37 patthoyts Exp $}
+        array set NTLMFlags {
+            unicode        0x00000001
+            oem            0x00000002
+            req_target     0x00000004
+            unknown        0x00000008
+            sign           0x00000010
+            seal           0x00000020
+            datagram       0x00000040
+            lmkey          0x00000080
+            netware        0x00000100
+            ntlm           0x00000200
+            unknown        0x00000400
+            unknown        0x00000800
+            domain         0x00001000
+            server         0x00002000
+            share          0x00004000
+            NTLM2          0x00008000
+            targetinfo     0x00800000
+            128bit         0x20000000
+            keyexch        0x40000000
+            56bit          0x80000000
+        }
     }
 }
 
@@ -46,7 +65,7 @@ proc ::SASL::NTLM::NTLM {context challenge args} {
             set pass [eval [linsert $ctx(callback) end $context password]]
             set ctx(response) [CreateResponse \
                                    $ctx(realm) $ctx(hostname) \
-                                   $user $pass $params(nonce)]
+                                   $user $pass $params(nonce) $params(flags)]
             Decode $ctx(response)
             set result 0
         }
@@ -66,14 +85,17 @@ proc ::SASL::NTLM::NTLM {context challenge args} {
 # This message contains the hostname (not domain qualified) and the 
 # NT domain name for authentication.
 #
-proc ::SASL::NTLM::CreateGreeting {domainname hostname} {
+proc ::SASL::NTLM::CreateGreeting {domainname hostname {flags {}}} {
     set domain [encoding convertto ascii $domainname]
     set host [encoding convertto ascii $hostname]
     set d_len [string length $domain]
     set h_len [string length $host]
     set d_off [expr {32 + $h_len}]
+    if {[llength $flags] == 0} {
+        set flags {unicode oem ntlm server domain req_target}
+    }
     set msg [binary format a8iississi \
-                 "NTLMSSP\x00" 1 [expr {0x3207}] \
+                 "NTLMSSP\x00" 1 [Flags $flags] \
                  $d_len $d_len $d_off \
                  $h_len $h_len 32]
     append msg $host $domain
@@ -94,7 +116,7 @@ proc ::SASL::NTLM::CreateChallenge {domainname} {
     set msg [binary format a8issii \
                  "NTLMSSP\x00" 2 \
                  $t_len $t_len 48 \
-                 [expr {0x01028100}]]
+                 [Flags {ntlm unicode}]]
     append msg $nonce $pad $context $pad $target
     return $msg
 }
@@ -102,46 +124,54 @@ proc ::SASL::NTLM::CreateChallenge {domainname} {
 # Compose the final client response. This contains the encoded username
 # and password, along with the server nonce value.
 #
-proc ::SASL::NTLM::CreateResponse {domainname hostname username passwd nonce} {
+proc ::SASL::NTLM::CreateResponse {domainname hostname username passwd nonce flags} {
     set lm_resp [LMhash $passwd $nonce]
     set nt_resp [NThash $passwd $nonce]
 
-    set domain [to_unicode_le [string toupper $domainname]]
-    set host   [to_unicode_le [string toupper $hostname]]
-    set user   [to_unicode_le $username]
+    set domain  [string toupper $domainname]
+    set host    [string toupper $hostname]
+    set user    $username
+    set unicode [expr {$flags & 0x00000001}]
+
+    if {$unicode} {
+      set domain [to_unicode_le $domain]
+      set host   [to_unicode_le $host]
+      set user   [to_unicode_le $user]
+    }
 
     set l_len [string length $lm_resp]; # LM response length
     set n_len [string length $nt_resp]; # NT response length
     set d_len [string length $domain];  # Domain name length
     set h_len [string length $host];    # Host name length
     set u_len [string length $user];    # User name length
-
-    # The full message length
-    set m_len [expr {0x40 + $d_len + $u_len + $h_len + $n_len + $l_len}]
+    set s_len 0 ;                       # Session key length
 
     # The offsets to strings appended to the structure
-    set l_off [expr {0x40 + $d_len + $u_len + $h_len}]
-    set n_off [expr {0x40 + $d_len + $u_len + $h_len + $l_len}]
-    set d_off [expr {0x40}]
-    set u_off [expr {0x40 + $d_len}]
-    set h_off [expr {0x40 + $d_len + $u_len}]
+    set d_off [expr {0x40}];            # Fixed offset to Domain buffer
+    set u_off [expr {$d_off + $d_len}]; # Offset to user buffer 
+    set h_off [expr {$u_off + $u_len}]; # Offset to host buffer
+    set l_off [expr {$h_off + $h_len}]; # Offset to LM hash
+    set n_off [expr {$l_off + $l_len}]; # Offset to NT hash
+    set s_off [expr {$n_off + $n_len}]; # Offset to Session key
 
-    set msg [binary format a8is4s4s4s4s4iii \
+    set msg [binary format a8is4s4s4s4s4s4i \
                  "NTLMSSP\x00" 3 \
                  [list $l_len $l_len $l_off 0] \
                  [list $n_len $n_len $n_off 0] \
                  [list $d_len $d_len $d_off 0] \
                  [list $u_len $u_len $u_off 0] \
                  [list $h_len $h_len $h_off 0] \
-                 $m_len 0x0201 0]
+                 [list $s_len $s_len $s_off 0] \
+                 $flags]
     append msg $domain $user $host $lm_resp $nt_resp
-
     return $msg
 }
 
 proc ::SASL::NTLM::Debug {msg} {
     array set d [Decode $msg]
-    if {[info exists d(flags)]}  { set d(flags) [list [format 0x%08x $d(flags)] [decodeflags $d(flags)]] }
+    if {[info exists d(flags)]}  { 
+        set d(flags) [list [format 0x%08x $d(flags)] [decodeflags $d(flags)]] 
+    }
     if {[info exists d(nonce)]}  { set d(nonce) [base64::encode $d(nonce)] }
     if {[info exists d(lmhash)]} { set d(lmhash) [base64::encode $d(lmhash)] }
     if {[info exists d(nthash)]} { set d(nthash) [base64::encode $d(nthash)] }
@@ -149,68 +179,83 @@ proc ::SASL::NTLM::Debug {msg} {
 }
 
 proc ::SASL::NTLM::Decode {msg} {
+    #puts [Debug $msg]
     binary scan $msg a7ci protocol zero type
-
+    
     switch -exact -- $type {
         1 {
             binary scan $msg @12ississi flags dlen dlen2 doff hlen hlen2 hoff
             binary scan $msg @${hoff}a${hlen} host
             binary scan $msg @${doff}a${dlen} domain
-            #log::log debug "NTLM($type) [decodeflags $flags]\n \
-            #    '$host' '$domain'"
-            return [list type $type flags [format 0x%08x $flags] domain $domain host $host]
+            return [list type $type flags [format 0x%08x $flags] \
+                        domain $domain host $host]
         }
         2 {
             binary scan $msg @12ssiia8a8 dlen dlen2 doff flags nonce pad
             set domain {}; binary scan $msg @${doff}a${dlen} domain
-            set domain [from_unicode_le $domain]
+            set unicode [expr {$flags & 0x00000001}]
+            if {$unicode} {
+                set domain [from_unicode_le $domain]
+            }
+
             binary scan $nonce H* nonce_h
             binary scan $pad   H* pad_h
-            #puts stderr "NTLM($type) [decodeflags $flags]\n \
-            #    '$domain' '$nonce_h' '$pad_h'"
-            return [list type $type flags [format 0x%08x $flags] domain $domain nonce $nonce]
+            return [list type $type flags [format 0x%08x $flags] \
+                        domain $domain nonce $nonce]
         }
         3 {
-            binary scan $msg @12ssississississiii \
-                lmlen lmlen2 lmoff ntlen ntlen2 ntoff \
-                dlen  dlen2  doff  ulen  ulen2  uoff \
+            binary scan $msg @12ssissississississii \
+                lmlen lmlen2 lmoff \
+                ntlen ntlen2 ntoff \
+                dlen  dlen2  doff  \
+                ulen  ulen2  uoff \
                 hlen  hlen2  hoff \
-                mlen  flags
+                slen  slen2  soff \
+                flags
             set domain {}; binary scan $msg @${doff}a${dlen} domain
             set user {};   binary scan $msg @${uoff}a${ulen} user
             set host {};   binary scan $msg @${hoff}a${hlen} host
-            set domain [from_unicode_le $domain]
-            set user   [from_unicode_le $user]
-            set host   [from_unicode_le $host]
+            set unicode [expr {$flags & 0x00000001}]
+            if {$unicode} {
+                set domain [from_unicode_le $domain]
+                set user   [from_unicode_le $user]
+                set host   [from_unicode_le $host]
+            }
             binary scan $msg @${ntoff}a${ntlen} ntdata
             binary scan $msg @${lmoff}a${lmlen} lmdata
             binary scan $ntdata H* ntdata_h
             binary scan $lmdata H* lmdata_h
-            #log::log debug "NTLM($type) [decodeflags $flags]\n \
-            #    mlen:$mlen '$domain' '$host' '$user'"
-            #log::log debug "  LM '$lmdata_h'\n  NT '$ntdata_h'"
-            return [list type $type flags [format 0x%08x $flags] domain $domain \
-                        host $host user $user lmhash $lmdata nthash $ntdata]
+            return [list type $type flags [format 0x%08x $flags]\
+                        domain $domain host $host user $user \
+                        lmhash $lmdata nthash $ntdata]
+        }
+        default {
+            return -code error "invalid NTLM data: type not recognised"
         }
     }
 }
 
 proc ::SASL::NTLM::decodeflags {value} {
-    set flags {
-        0x0001 unicode 0x0002 oem    0x0004 req_target 0x0008 unknown 
-        0x0010 sign    0x0020 seal   0x0040 datagram   0x0080 lmkey 
-        0x0100 netware 0x0200 ntlm   0x0400 unknown    0x0800 unknown
-        0x1000 domain  0x2000 server 0x4000 share      0x8000 NTLM2
-        0x00800000 targetinfo 0x20000000 128bit 0x40000000 keyexch
-        0x80000000 56bit
-    }
-    set r {}
-    foreach {mask name} $flags {
+    variable NTLMFlags
+    set result {}
+    foreach {flag mask} [array get NTLMFlags] {
         if {$value & ($mask & 0xffffffff)} {
-            lappend r $name
+            lappend result $flag
         }
     }
-    return $r
+    return $result
+}
+
+proc ::SASL::NTLM::Flags {flags} {
+    variable NTLMFlags
+    set result 0
+    foreach flag $flags {
+        if {![info exists NTLMFlags($flag)]} {
+            return -code error "invalid ntlm flag \"$flag\""
+        }
+        set result [expr {$result | $NTLMFlags($flag)}]
+    }
+    return $result
 }
 
 # Convert a string to unicode in little endian byte order.
