@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: ntlm.test,v 1.3 2006/04/20 10:14:11 patthoyts Exp $
+# RCS: @(#) $Id: ntlm.test,v 1.4 2006/09/14 11:33:37 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 
@@ -56,7 +56,7 @@ set Chk(2) [join {TlRMTVNTUAACAAAADAAMADAAAAABAoEAASNFZ4mrze8
     EUAUgBWAEUAUgAEABQAZABvAG0AYQBpAG4ALgBjAG8AbQADACIAcwBlAHIAdgBlAHI
     ALgBkAG8AbQBhAGkAbgAuAGMAbwBtAAAAAAA=}]
 set Chk(3) [join {TlRMTVNTUAADAAAAGAAYAGoAAAAYABgAggAAAAwADABAAAAACAAI
-    AEwAAAAWABYAVAAAAJoAAAABAgAAAAAAAEQATwBNAEEASQBOAHUAcwBlAHIAVwBPAF
+    AEwAAAAWABYAVAAAAAAAAACaAAAAAQKBAEQATwBNAEEASQBOAHUAcwBlAHIAVwBPAF
     IASwBTAFQAQQBUAEkATwBOAMM3zVy9RPyXgqZnr21CfG3mfCDC0+d8ViWpjBwx6BhH
     Rmspst9GgPOZWPuMITqcxg==} {}]
 
@@ -76,8 +76,6 @@ test SASL-NTLM-1.1 {NTLM client response} {
         SASL::step $ctx ""
         SASL::step $ctx [base64::decode $Chk(2)]
         set response [SASL::response $ctx]
-        #puts "C: [SASL::NTLM::Decode [base64::decode $Chk(3)]]"
-        #puts "R: [SASL::NTLM::Decode $response]"
         SASL::cleanup $ctx
         base64::encode -maxlen 0 $response
     } res] $res
