@@ -1,3 +1,9 @@
+2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ntlm.tcl:     bug 1557494 - added support for OEM-type
+	* ntlm.test:    NTLM packets (provided by Mark Janssen)
+	* pkgIndex.tcl: Increment NTLM version to 1.1.0
+
 2006-09-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* sasl.tcl:     Incremented package version to 1.3.0, updated
